# PyRSoXS

./: pyproject.toml
PyRSoXS/: README.md
PyRSoXS/pypxs/: Ipf_OverRide Rotated CCD QMap.ipf
PyRSoXS/pypxs/core/: fits.py
PyRSoXS/tests/: RunRotatedCCD.ipynb
pypxs/: Ipf_OverRide Solid Angle Correction.ipf  __init__.py  _rotated_geometry.py
